--- a/four-card-feature-section-master/index.css
+++ b/four-card-feature-section-master/index.css
@@ -16,6 +16,8 @@ body {
 	font-family: 'Poppins', sans-serif;
 	font-size: 15px;
 	color: var(--grayish-blue);
+	margin: 0;
+	padding: 0;
 }
 
 h1 {
@@ -31,6 +33,7 @@ h1 {
 h2 {
 	color: var(--very-dark-blue);
 	font-weight: 600;
+	margin: 10px;
 }
 
 h3 {
@@ -38,11 +41,19 @@ h3 {
 	font-weight: 400;
 }
 
+p {
+	font-size: 15px;
+	margin: 10px;
+}
+
 section {
 	background-color: #ffffff;
 	box-shadow: 10px 10px 15px 0px #d1d1d1, -10px 0px 15px 0px #d1d1d1;
 	border-radius: 10px;
-	margin: 20px;
+	margin: 30px;;
+	height: 220px;
+	width: 310px;
+	padding: 15px;
 }
 
 .section-one {
