--- a/styles.css
+++ b/styles.css
@@ -8,21 +8,36 @@
 	--very-dark-blue: hsl(234, 12%, 34%);
 	--grayish-blue: hsl(229, 6%, 66%);
 	--very-light-gray: hsl(0, 0%, 98%);
+	--box-shadow-color: rgb(76, 78, 97, .15);
 }
 
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
 
 body {
 	background-color: var(--very-light-gray);
 	font-family: 'Poppins', sans-serif;
-	font-size: 15px;
 	color: var(--grayish-blue);
 	margin: 0;
 	padding: 0;
 }
 
+header {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	padding: 75px 20px 75px 20px;
+	text-align: center;
+}
+
 h1 {
 	color: var(--very-dark-blue);
 	font-weight: 200;
+	font-size: 24px;
+	margin: 0;
 }
 
 .h1-bold {
@@ -33,7 +48,7 @@ h1 {
 h2 {
 	color: var(--very-dark-blue);
 	font-weight: 600;
-	margin: 10px;
+	margin: 15px 15px;
 }
 
 h3 {
@@ -42,32 +57,54 @@ h3 {
 }
 
 p {
-	font-size: 15px;
-	margin: 10px;
+	font-size: 13px;
+	margin: 15px 15px;
 }
 
 section {
-	background-color: #ffffff;
-	box-shadow: 10px 10px 15px 0px #d1d1d1, -10px 0px 15px 0px #d1d1d1;
-	border-radius: 10px;
-	margin: 30px;;
+	border-radius: 8px;
+	margin: 0px 30px 30px 30px;
 	height: 220px;
-	width: 310px;
+	box-shadow: 0 10px 20px 10px var(--box-shadow-color);
 	padding: 15px;
+	position: relative;
 }
 
-.section-one {
-	border-top: 5px solid var(--cyan);
+section::before {
+	position: absolute;
+	border-top-left-radius: 8px;
+	border-top-right-radius: 8px;
+	content: '';
+	height: 4px;
+	width: 100%;
+	top: 0;
+	left: 0;
 }
 
-.section-two {
-	border-top: 5px solid var(--red);
+img {
+    float: right;
+    margin: 0px 15px 15px 15px;
+    height: 60px;
 }
 
-.section-three {
-	border-top: 5px solid var(--orange);
+.section-one::before {
+	background-color: var(--cyan);
 }
 
-.section-four {
-	border-top: 5px solid var(--blue);
+.section-two::before {
+	background-color: var(--red);
+}
+
+.section-three::before {
+	background-color: var(--orange);
+}
+
+.section-four::before {
+	background-color: var(--blue);
+	margin-bottom: 50px;
+}
+
+footer {
+	padding: 30px 30px 15px 30px;
+	text-align: center;
 }
